@@ -87,5 +87,5 @@ test: clean debug
 	-@killall mwstest 2>/dev/null
 	@cp miniwebsvr mwstest
 	./mwstest --root test/www --port 8081 --interface 127.0.0.1 > miniwebsvrout.log &
-	perl test/test.pl 127.0.0.1 8081 "Default page" "Dirlist" "Dirlist2" "SubRoot" "SubRoot2" "SubRoot3" > testout.log
+	perl test/test.pl 127.0.0.1 8081 "Default page" "Default page2" "Dirlist" "Dirlist2" "Not Found" "SubRoot" "SubRoot2" "SubRoot3" > testout.log
 	@killall mwstest
