@@ -3,3 +3,4 @@ Location: /dirlist/
 Server: MiniWebSvr/
 Date:
 
+<HTML><HEAD><TITLE>HTTP 301 - Moved Permanently</TITLE></HEAD><BODY><H1>HTTP 301 - Moved Permanently<H1><H3>MiniWebSvr/</H3></BODY></HTML>
